--- a/package.json
+++ b/package.json
@@ -4,26 +4,28 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "build": "NODE_ENV=production && vue-cli-service build",
+    "test:e2e": "vue-cli-service test:e2e",
     "lint": "eslint --ext .js,.vue .",
     "lint-fix": "eslint --ext .js,.vue . --fix"
   },
   "dependencies": {
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
-    "lodash": "^4.17.21",
     "vue": "^3.0.0-beta.1",
     "vue-router": "^4.0.0-alpha.6",
     "vuex": "^4.0.0-alpha.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
+    "@vue/cli-plugin-e2e-cypress": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "@vue/compiler-sfc": "^3.0.0-beta.1",
     "autoprefixer": "^9",
     "babel-eslint": "^10.1.0",
+    "cypress": "7.3.0",
     "eslint": "^7.26.0",
     "eslint-plugin-vue": "^7.9.0",
     "postcss": "^7",
