--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "NODE_ENV=production && vue-cli-service build",
+    "build": "NODE_VERSION=14 && NODE_ENV=production && vue-cli-service build",
     "test:e2e": "vue-cli-service test:e2e",
     "lint": "eslint --ext .js,.vue .",
     "lint-fix": "eslint --ext .js,.vue . --fix"
